[package]
name = "poisson-piston"
version = "0.1.0"
authors = ["Damien Pollet <damien.pollet@gmail.com>"]

[dependencies]
poisson = { git = "https://github.com/WaDelma/poisson.git", branch = "incremental" }

rand = "*"
nalgebra = "0.2.*"

piston = "*"
piston_window = "*"
piston2d-graphics = "*"

fps_counter = "*"
find_folder = "*"
